Fixed contrast errors

--- a/public/assets/components/Pagination/pagination.css
+++ b/public/assets/components/Pagination/pagination.css
@@ -17,7 +17,7 @@
 }
 
 #pagination-current {
-    background-color: #FF7171;
+    background-color: #CD4A47;
     color: white;
     border-radius: 0;
 }
