--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -38,6 +38,8 @@
     max-width: 340px;
     font-family: SegoeUI;
     font-size: 22px;
+    padding: 20px;
+    background-color: rgba(46, 46, 46, 0.671);
 }
 
 
